# feast-sandbox

./: .gitignore  README.md  pyproject.toml
feast-aws/: .gitignore  README.md  athena_feast_query.sql  athena_preview  locustfile.py  pyproject.toml  requests_1678366360.313225.csv
feast-aws/featurestore/: README.md  explore.ipynb
feast-aws/featurestore/feature_repo/: definitions.py  feature_store.yaml
feast-aws/terraform/: .terraform.lock.hcl  athena.tf  glue.tf  main.tf  outputs.tf  redshift.tf  roles.tf  s3.tf  terraform.tfstate  terraform.tfvars  variables.tf  versions.tf
hybrid_store/: README.md  docker-compose.yml
hybrid_store/events/: Dockerfile  kafka_events.py  requirements.txt
hybrid_store/feature_repo/: Dockerfile  data_sources.py  entities.py  explore.ipynb  feature_store.yaml  feature_views.py  processor.py
hybrid_store/feature_repo/data/: local_registry.db
local_store/: debug_registry.py  explore.ipynb  generate_data.py  model.joblib
local_store/feature_repo/: definitions.py  feature_store.yaml
local_store/feature_repo/data/: online_store.db  registry.db
