[tool.poetry]
name = "feature-store"
version = "0.1.0"
description = ""
authors = ["shaurya.rawat <shaurya.rawat@new-work.se>"]

[tool.poetry.dependencies]
python = "^3.8"
feast = {path = "/Users/shaurya.rawat/Documents/mlplatform/feast", develop = true}
scikit-learn = "^1.2.1"
grpcio-tools = "^1.51.1"
grpcio = "^1.51.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
